@@ -1,3 +1,9 @@
+2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/net/net.c (defserver_set_env): New function.
+	(defserver_get_env): Likewise.
+	(GRUB_MOD_INIT): Register net_default_server and pxe_default_server.
+
 2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/kern/emu/hostdisk.c (read_device_map): Skip invalid Fedora
